--- a/app/views/shared/_main-navigation.html.erb
+++ b/app/views/shared/_main-navigation.html.erb
@@ -2,6 +2,8 @@
 <div class='main-navigation-container'>
     <div class='main-navigation-logo-wrapper'>
         Logo
+        
+        <h2><%= current_user.username if logged_in?(:site_admin, :user) %></h2>
     </div>
 
     <div class='main-navigation-links-wrapper'>
@@ -11,6 +13,11 @@
     </div>
 
     <div class='main-navigation-auth-links-wrapper'>
-        auth links
+        <% if logged_in?(:site_admin, :user) %>
+            <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+        <% else %>
+            <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
+            <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+        <% end %>
     </div>
 </div>
