working on adding heart button

--- a/app/views/pages/options.html.erb
+++ b/app/views/pages/options.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#options</h1>
-<p>Find me in app/views/pages/options.html.erb</p>
+
+<div>
+    <h2>Options:</h2>
+
+    <%= link_to 'User Page:', user_info_path %>
+</div>
