--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -4,9 +4,12 @@
     <%= post.content %>
   </p>
 
+  
+
   <p>
     <strong>Image:</strong>
-    <%= post.image %>
+    <%= image_tag "#{post.image}" %>
   </p>
 
 </div>
+
