--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,9 +2,23 @@
 
 <%= render @post %>
 
+<i class="bi bi-balloon-heart"></i>
+
 <div>
   <%= link_to "Edit this post", edit_post_path(@post) %> |
   <%= link_to "Back to posts", posts_path %>
 
   <%= button_to "Destroy this post", @post, method: :delete %>
 </div>
+
+<script>
+  
+  const icon = document.querySelector("i");
+
+  icon.addEventListener("click", () => {
+    console.log("clicked");
+    icon.classList.remove("bi-balloon-heart");
+    void icon.offsetWidth;
+    icon.classList.add("bi-ballon-heart-fill");
+  });
+</script>
