--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -9,6 +9,15 @@
     min-height: calc(100vh - 150px);
     position: relative;
 
+    .post-show-content-container {
+        width: 90%;
+        margin: 2rem auto;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+
+        
+    }
+
     .post-show-actions {
         width: 100%;
         padding: 20px;
