--- a/app/views/posts/_post_comment_form.html.erb
+++ b/app/views/posts/_post_comment_form.html.erb
@@ -14,18 +14,17 @@
 
     <div>
         <%= form.label :content, style: "display: block" %>
-        <%= form.text_area :content %>
+        <%= form.text_area :content, placeholder: 'what......' %>
     </div>
 
     <div>
-        <%= form.hidden_field :user_id, value: current_user.id %>
+        <%= form.hidden_field :user_id %>
     </div>
 
     <div>
-        <%= form.hidden_field :post_id, value: postID %>
+        <%= form.hidden_field :post_id, value =>  %>
     </div>
 
-    <div>
-        <%= form.submit %>
-    </div>
+
+    <%= form.submit %>
 <% end %>
