--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,22 +2,28 @@
 
 <div class='post-show-container'>
 
-  <%= render @post %>
+  <div class='post-show-content-container'>
 
-  <p><%= @post.user_id%></p>
-  <p>current user: <%= current_user.id %></p>
+    <div class='post-wrapper'>
+      <%= render @post %>
 
-  <i id='like-heart' class="bi bi-balloon-heart"></i>
+      <p><%= @post.user_id%></p>
+      <p>current user: <%= current_user.id %></p>
 
-  <button class='test-btn'>Test Button</button>
-  <p class='test-output'>
-    
-  </p>
+      <i id='like-heart' class="bi bi-balloon-heart"></i>
 
-  <div>
-    <%= render partial: "post_comment_form", locals: {comment: @comment, postID: @post.id} %>
-    <h2>Comments</h2>
-    <%= render @comments %>
+      <button class='test-btn'>Test Button</button>
+      <p class='test-output'>
+        
+      </p>
+    </div>
+
+
+    <div>
+      <%= render partial: "post_comment_form", locals: {comment: @comment, postID: @post.id} %>
+      <h2>Comments</h2>
+      <%= render @comments %>
+    </div>
   </div>
 
   <div class='post-show-actions'>
@@ -42,8 +48,13 @@
     count += 1;
     console.log('test');
     testOut.innerHTML = count;
-    heart.classList.add('bi-balloon-heart-fill');
-    void heart.offsetWidth;
-    heart.classList.remove('bi-balloon-heart');
+    
+    if (count % 2 == 0) {
+      heart.classList.remove('bi-balloon-heart-fill');
+      heart.classList.add('bi-balloon-heart');
+    } else {
+      heart.classList.remove('bi-balloon-heart');
+      heart.classList.add('bi-balloon-heart-fill');
+    }
   });
 </script>
