--- a/app/views/shared/_main-navigation.html.erb
+++ b/app/views/shared/_main-navigation.html.erb
@@ -14,7 +14,7 @@
 
     <div class='main-navigation-auth-links-wrapper'>
         <% if logged_in?(:site_admin, :user) %>
-            <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+            <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
         <% else %>
             <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
             <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
